Fix some news header wrapping problem.

--- a/MyBlog/Post/static/Post/css/news.css
+++ b/MyBlog/Post/static/Post/css/news.css
@@ -1,5 +1,6 @@
 .news_header{
 	display: flex;
+	flex-wrap: wrap;
 	align-items: end;
 }
 
